--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -37,7 +37,7 @@
 
   .ant-menu-item-divider {
     height: 0.5px !important;
-    background: #fa4a0c !important;
+    background: #a82825 !important;
     margin-top: 35px !important;
   }
 
