--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -148,6 +148,10 @@
       & > .search-container {
         margin: 5px;
         min-width: 100px;
+
+        .ant-input-clear-icon {
+          padding-right: 25px !important;
+        }
       }
     }
 
