--- a/src/components/user-app-components/product/skeleton.scss
+++ b/src/components/user-app-components/product/skeleton.scss
@@ -26,3 +26,9 @@
     width: 100% !important;
   }
 }
+
+.header-background {
+  background-image: url('/assets/images/food-bg.jpeg');
+  // background-repeat: no-repeat;
+  background-size: cover;
+}
