--- a/src/components/adminPage/input.scss
+++ b/src/components/adminPage/input.scss
@@ -49,7 +49,7 @@
   }
 
   &.active {
-    padding: 7px 48px 7px 12px !important;
+    // padding: 7px 48px 7px 12px !important;
     border-width: 1px;
     width: 100%;
 
