--- a/src/components/button/styles.module.css
+++ b/src/components/button/styles.module.css
@@ -48,7 +48,7 @@
   /* color: var(--white-100) !important; */
   /* border-color: var(--black-50) !important; */
   color: var(--red-100) !important;
-  border-bottom: 2px solid #fa4a0c;
+  border-bottom: 2px solid #a82825;
 }
 
 /* count btn */
